opam-version: "2.0"
name: "ocaml-protoc"
version: "2.1"
synopsis: "Protobuf compiler for OCaml"
description: "Protobuf compiler for OCaml"
maintainer: "Maxime Ransan <maxime.ransan@gmail.com>"
authors:[
  "Maxime Ransan <maxime.ransan@gmail.com>"
]
homepage: "https://github.com/mransan/ocaml-protoc"
bug-reports:"https://github.com/mransan/ocaml-protoc/issues"
dev-repo:"git+https://github.com/mransan/ocaml-protoc.git"
license: "MIT"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>="4.02.1"}
  "dune"  {>="1.11"}
  "stdlib-shims"
  "odoc" {with-doc}
]
