opam-version: "2.0"
name: "ocaml-protoc"
version: "2.2"
synopsis: "Protobuf compiler for OCaml"
description: "Protobuf compiler for OCaml"
maintainer: "Maxime Ransan <maxime.ransan@gmail.com>"
post-messages: [
"The runtime library is now called \"pbrt\"."
]
authors:[
  "Maxime Ransan <maxime.ransan@gmail.com>"
]
homepage: "https://github.com/mransan/ocaml-protoc"
bug-reports:"https://github.com/mransan/ocaml-protoc/issues"
dev-repo:"git+https://github.com/mransan/ocaml-protoc.git"
license: "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>="4.03.0"}
  "dune"  {>="2.0"}
  "stdlib-shims"
  "pbrt" {= version}
  "odoc" {with-doc}
]
