opam-version: "2.0"
name: "pbrt"
version: "2.2"
synopsis: "Runtime library for Protobuf tooling"
description: "Runtime library for Protobuf tooling"
maintainer: "Maxime Ransan <maxime.ransan@gmail.com>"
post-messages: [
"Pbrt: runtime library for ocaml-protoc.

A shim library named \"ocaml-protoc\" still exists, to ease the
migration."
]
authors:[
  "Maxime Ransan <maxime.ransan@gmail.com>"
]
homepage: "https://github.com/mransan/ocaml-protoc"
bug-reports:"https://github.com/mransan/ocaml-protoc/issues"
dev-repo:"git+https://github.com/mransan/ocaml-protoc.git"
license: "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" "pbrt,ocaml-protoc" "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>="4.03.0"}
  "dune"  {>="2.0"}
  "stdlib-shims"
  "odoc" {with-doc}
]
