(executable
 (name benchs)
 (ocamlopt_flags :standard -inline 100)
 (foreign_stubs
  (language c)
  (flags :standard -std=c99 -O2)
  (names stubs))
 (libraries ocaml-protoc benchmark))

(rule
 (targets foo.ml foo.mli)
 (deps foo.proto)
 (action
  (run ocaml-protoc %{deps} --binary --make --pp --ml_out .)))
