
(library
  (name calculator)
  (modules calculator)
  (libraries pbrt pbrt_services))

(executable
  (name calculator_client)
  (flags :standard -w -40)
  (modules calculator_client)
  (libraries calculator zmq pbrt_zmq))

(executable
  (name calculator_server)
  (flags :standard -w -40)
  (modules calculator_server)
  (libraries calculator zmq pbrt_zmq))

(rule
 (targets calculator.ml calculator.mli)
 (deps calculator.proto)
 (action
  (run ocaml-protoc --binary --pp --yojson --services --ml_out ./ %{deps})))
