(rule
 (targets example01.ml example01.mli)
 (deps example01.proto)
 (action
  (run ocaml-protoc --binary --pp --ml_out ./ %{deps})))

(test
 (name example01)
 (modules t_example01 example01)
 (libraries pbrt))

(rule
 (targets example03.ml example03.mli)
 (deps example03.proto)
 (action
  (run ocaml-protoc --pp --ml_out ./ %{deps})))

(test
 (name example03)
 (modules t_example03 example03)
 (libraries pbrt))

(rule
 (targets example04.ml example04.mli)
 (deps example04.proto)
 (action
  (run ocaml-protoc --pp --ml_out ./ %{deps})))

(test
 (name example04)
 (modules t_example04 example04)
 (libraries pbrt))

(rule
 (targets example05.ml example05.mli)
 (deps example05.proto)
 (action
  (run ocaml-protoc --binary --pp --ml_out ./ %{deps})))

(test
 (name example05)
 (modules t_example05 example05)
 (libraries pbrt))

(rule
 (targets calculator.ml calculator.mli)
 (deps calculator.proto)
 (action
  (run ocaml-protoc --binary --pp --yojson --services --ml_out ./ %{deps})))

(test
 (name calculator)
 (modules t_calculator calculator)
 (package pbrt_services)
 (libraries pbrt pbrt_yojson pbrt_services))

(rule
 (targets file_server.ml file_server.mli)
 (deps file_server.proto)
 (action
  (run ocaml-protoc --binary --pp --yojson --services --ml_out ./ %{deps})))

(test
 (name file_server)
 (modules file_server) ; just check that it compiles
 (package pbrt_services)
 (libraries pbrt pbrt_yojson pbrt_services))
