(rule
 (targets example01.ml example01.mli)
 (deps example01.proto)
 (action
  (run ocaml-protoc --binary --pp --ml_out ./ %{deps})))

(rule
 (alias runtest)
 (action
  (diff example01.ml.expected example01.ml)))

(rule
 (alias runtest)
 (action
  (diff example01.mli.expected example01.mli)))

(test
 (name example01)
 (modules t_example01 example01)
 (package ocaml-protoc)
 (libraries pbrt))

(rule
 (targets example03.ml example03.mli)
 (deps example03.proto)
 (action
  (run ocaml-protoc --pp --ml_out ./ %{deps})))

(rule
 (alias runtest)
 (action
  (diff example03.ml.expected example03.ml)))

(rule
 (alias runtest)
 (action
  (diff example03.mli.expected example03.mli)))

(test
 (name example03)
 (modules t_example03 example03)
 (package ocaml-protoc)
 (libraries pbrt))

(rule
 (targets example04.ml example04.mli)
 (deps example04.proto)
 (action
  (run ocaml-protoc --pp --ml_out ./ %{deps})))

(rule
 (alias runtest)
 (action
  (diff example04.ml.expected example04.ml)))

(rule
 (alias runtest)
 (action
  (diff example04.mli.expected example04.mli)))

(test
 (name example04)
 (modules t_example04 example04)
 (package ocaml-protoc)
 (libraries pbrt))

(rule
 (targets example05.ml example05.mli)
 (deps example05.proto)
 (action
  (run ocaml-protoc --binary --pp --ml_out ./ %{deps})))

(rule
 (alias runtest)
 (action
  (diff example05.ml.expected example05.ml)))

(rule
 (alias runtest)
 (action
  (diff example05.mli.expected example05.mli)))

(test
 (name example05)
 (modules t_example05 example05)
 (package ocaml-protoc)
 (libraries pbrt))

(rule
 (targets calculator.ml calculator.mli)
 (deps calculator.proto)
 (action
  (run ocaml-protoc --binary --pp --yojson --services --ml_out ./ %{deps})))

(rule
 (alias runtest)
 (action
  (diff calculator.ml.expected calculator.ml)))

(rule
 (alias runtest)
 (action
  (diff calculator.mli.expected calculator.mli)))

(test
 (name calculator)
 (modules t_calculator calculator)
 (package ocaml-protoc)
 (libraries pbrt pbrt_yojson pbrt_services))

(rule
 (targets file_server.ml file_server.mli)
 (deps file_server.proto)
 (action
  (run ocaml-protoc --binary --pp --yojson --services --ml_out ./ %{deps})))

(rule
 (alias runtest)
 (action
  (diff file_server.ml.expected file_server.ml)))

(rule
 (alias runtest)
 (action
  (diff file_server.mli.expected file_server.mli)))

(test
 (name file_server)
 (modules file_server) ; just check that it compiles
 (package ocaml-protoc)
 (libraries pbrt pbrt_yojson pbrt_services))

(rule
 (targets orgchart.ml orgchart.mli)
 (deps orgchart.proto)
 (action
  (run ocaml-protoc --pp --binary --ml_out ./ %{deps})))

(rule
 (alias runtest)
 (action
  (diff orgchart.ml.expected orgchart.ml)))

(rule
 (alias runtest)
 (action
  (diff orgchart.mli.expected orgchart.mli)))

(test
 (name orgchart_ml)
 (modules orgchart orgchart_ml)
 (package ocaml-protoc)
 (libraries pbrt))
