(executable
  (name ocaml_protoc)
  (public_name ocaml-protoc)
  (package ocaml-protoc)
  (modules
    ocaml_protoc
    ocaml_protoc_cmdline
    ocaml_protoc_compilation
    ocaml_protoc_generation)
  (libraries ocaml-protoc.compiler-lib)
  (flags :standard -open OCaml_protoc_compiler_lib)
)

(library
  (synopsis "Shim to depend on pbrt")
  (name ocaml_protoc)
  (public_name ocaml-protoc)
  (modules)
  (libraries (re_export pbrt)))
