(executable
 (name ocaml_protoc)
 (public_name ocaml-protoc)
 (package ocaml-protoc)
 (modules ocaml_protoc ocaml_protoc_cmdline ocaml_protoc_compilation
   ocaml_protoc_generation ocaml_protoc_descriptor)
 (libraries ocaml-protoc.compiler-lib pbrt_descriptor)
 (flags :standard -open Ocaml_protoc_compiler_lib))

(library
 (synopsis "Shim to depend on pbrt")
 (name ocaml_protoc)
 (public_name ocaml-protoc)
 (modules)
 (libraries
  (re_export pbrt)))

(documentation
 (package ocaml-protoc)
 (mld_files index))
