(test
  (name google_unittest)
  (libraries pbrt))

(rule
  (targets unittest_types.ml unittest_types.mli)
  (deps (:file unittest.proto) unittest_import.proto)
  (action (run ocaml-protoc -ml_out . -I . %{file})))

(rule
  (targets unittest_import_types.ml unittest_import_types.mli)
  (deps (:file unittest_import.proto))
  (action (run ocaml-protoc -ml_out . -I . %{file})))

