(test
  (name google_unittest)
  (flags :standard -w -11)
  (libraries pbrt))

(rule
  (targets unittest.ml unittest.mli)
  (deps (:file unittest.proto) unittest_import.proto)
  (action (run ocaml-protoc --ml_out . -I . %{file})))

(rule
  (targets unittest_import.ml unittest_import.mli)
  (deps (:file unittest_import.proto))
  (action (run ocaml-protoc --ml_out . -I . %{file})))

